Added the login page Added login logic Added gallery links fetching Improved some older code Added authorization logic Added style namespaces Added password recovery route Fixed navigation logic Renamed some stuff for consistency

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
 Visit https://www.timondev.com
 -->
-<html lang="de-ch">
+<html lang="de-ch" data-style-namespace="default" data-theme="light">
     <head>
         <meta charset="utf-8" />
 
