Added the SiteMetadataService => Adds the site title and description with SSR support => Adds some other metadata stuff like robots
Formatted all files

Updated to the newest angular version and fixed a bug that came up

Removed a dot that was a typo

--- a/src/index.html
+++ b/src/index.html
@@ -14,24 +14,42 @@ Visit https://www.timondev.com
         <meta charset="utf-8" />
 
         <title>zurich meets tanzania</title>
-        <meta name="description" content="Welcome to www.zurich-meets-tanzania.com" />
+        <meta name="description" content="Loading..." />
         <meta property="og:title" content="zurich meets tanzania" />
-        <meta property="og:description" content="Welcome to www.zurich-meets-tanzania.com" />
-        <meta property="og:url" content="https://www.zurich-meets-tanzania.com/" />
+        <meta property="og:description" content="Loading..." />
+        <meta property="og:url" content="Loading..." />
+
+        <meta name="last-modified" content="Loading..." />
 
         <base href="/" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <meta name="Owner" content="Präsident Dr. Stefan Christen (Innere Medizin / Kardiologie)" contact="info@zurich-meets-tanzania.com" />
-        <meta name="Manager" content="Sekretariat Webdesign Sara Pieretti" contact="info@zurich-meets-tanzania.com" />
-        <meta name="Developer" content="Timon Fiedler" contact="info@timondev.com" />
-        <meta name="Contact page" content="https://www.timondev.com" />
-        <meta name="theme-color" content="#f27c0d" />
-        <meta name="google" content="nositelinkssearchbox" />
-        <meta name="robots" content="index,follow" />
+
+        <meta name="chairman" content="Loading..." />
+        <meta name="chairman-contact" content="Loading..." />
+
+        <meta name="secretary" content="Loading..." />
+        <meta name="secretary-contact" content="Loading..." />
+
+        <meta name="developer" content="Loading..." />
+        <meta name="developer-contact" content="Loading..." />
+        <meta name="developer-contact-page" content="Loading..." />
+        <meta name="developer-website" content="Loading..." />
+        <meta name="developer-linkedIn" content="Loading..." />
+        <meta name="developer-github" content="Loading..." />
+
+        <meta name="contact-page" content="Loading..." />
+
+        <meta name="theme-color" content="Loading..." />
+
+        <meta name="googlebot" content="index,follow,archive" />
+        <meta name="robots" content="index,follow,archive" />
+
         <meta property="og:image" content="/img/logo.png" />
         <meta property="og:image:type" content="image/png" />
         <link rel="icon" type="image/ico" href="/favicon.ico" />
+
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() {
