Added the cookie banner Added analytics (google and tianji) Added the privacy page Changed some variable names to match the new database rework Added an api endpoint that distributes environment variables (only ones that can be shared) Removed some hardcoded values that belong in the env file but needed to be used in the frontend Formatted all files

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,7 @@ Visit https://www.timondev.com
             });
         </script>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-74MV698XJC"></script>
+        <script async defer src="https://analytics.timondev.com/tracker.js" data-website-id="cmjmrqqbd001w8sboyc3pf4zl"></script>
     </head>
     <body>
         <app-root></app-root>
